Fix spacing on BlockQuote

--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/ContentBlocks/_QuoteBlock.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/ContentBlocks/_QuoteBlock.scss
@@ -1,4 +1,4 @@
 .QuoteBlock {
 	border-top: $border-thin;
-	padding-top: $u;
+	padding-top: 2*$u;
 }
